--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends Layout
 
 block content
   p Main page
+  p(id="counter")
   p #{number}
   form(method="POST")
     input(type="submit" value="Increment")
