--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,6 @@ block content
     p(id="counter") #{number}
     form(method="POST")
       label(for="custom-number") Custom Number
-      input(type="text" name="custom_number")
-      p
-        input(type="submit" value="+1 or Enter Custom Number")
+      input(type="text" class="number-input" name="custom_number")
+      p(class="button")
+        button(type="submit") +1 or Enter Custom Number
