--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends Layout
 
 block content
   div(class="wrapper")
+    //- pass in number from route variable
     p(id="counter") #{number}
     form(method="POST")
       label(for="custom-number") Custom Number
