changed text input to number

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,6 @@ block content
     p(id="counter") #{number}
     form(method="POST")
       label(for="custom-number") Custom Number
-      input(type="text" class="number-input" name="custom_number")
+      input(type="number" class="number-input" name="custom_number")
       p(class="button")
         button(type="submit") +1 or Enter Custom Number
