--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,8 @@ block content
     //- pass in number from route variable
     p(id="counter") #{number}
     form(method="POST")
-      label(for="custom-number") Custom Number
-      input(type="number" class="number-input" name="custom_number")
       p(class="button")
-        button(type="submit") +1 or Enter Custom Number
+        button(type="submit" formaction="/") +1
+      p(class="button")
+        button(type="submit" formaction="/customNumber") Update # to:
+        input(type="number" class="number-input" name="custom_number")
