--- a/views/index.pug
+++ b/views/index.pug
@@ -5,8 +5,8 @@ block content
     //- pass in number from route variable
     p(id="counter") #{number}
     form(method="POST")
-      p(class="button")
+      p(class="button increment")
         button(type="submit" formaction="/") +1
-      p(class="button")
+      p(class="button custom")
         button(type="submit" formaction="/customNumber") Update # to:
         input(type="number" class="number-input" name="custom_number")
