--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .wrapper {
-  width: 40%;
+  width: 500px;
   margin: 0 auto;
   text-align: center;
 }
@@ -12,9 +12,10 @@ label {
   margin-right: 5px;
 }
 
-#counter {
-  font-size: 8em;
-  margin-bottom: 0;
+p#counter {
+  font-size: 13vw;
+  margin: 10px 0 0 0;
+
 }
 
 input {
@@ -23,7 +24,7 @@ input {
 }
 
 .number-input {
-  width: 20%;
+  width: 25%;
   line-height: 100%;
   border: 1px solid black;
   border-radius: 5px;
@@ -48,12 +49,19 @@ button {
 
 .custom {
   text-align: left;
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
 }
 
 .custom button {
-  width: 70%;
+  width: 65%;
   margin-right: 5%;
+}
+
+@media screen and (max-width: 829px) {
+  .wrapper {
+    width: 90%;
+  }
+
+  p#counter {
+    font-size: 40vw;
+  }
 }
