--- a/public/style.css
+++ b/public/style.css
@@ -28,13 +28,14 @@ input {
   line-height: 100%;
   border: 1px solid black;
   border-radius: 5px;
+  vertical-align: top;
 }
 
 button {
-  padding: 40px 40px;
+  padding: 16px 40px;
   border-radius: 5px;
-  font-size: 3.5em;
-  border-color: none;
+  font-size: 2.5em;
+  border: none;
   background-color: #414245;
   color:#fff;
 }
@@ -45,6 +46,7 @@ button {
 
 .increment button {
   width: 100%;
+  padding: 30px 0;
 }
 
 .custom {
@@ -63,5 +65,9 @@ button {
 
   p#counter {
     font-size: 40vw;
+  }
+
+  button {
+    font-size: 6vw;
   }
 }
