--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Incrementer App
+    title Box Counter
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet")
     link(rel="stylesheet" type="text/css" href="/style.css")
