datat displaying on remote machine via ip address

--- a/views/view.pug
+++ b/views/view.pug
@@ -6,7 +6,7 @@ block content
     p(id="counter") #{number}
   script(src="/socket.io/socket.io.js")
   script.
-      var socket = io('http://localhost:7777');
+      var socket = io('http://192.168.0.102:7777');
       //- when socketio emits a number change the inner html of the counter p tag
       socket.on('updateCounter', function (data) {
       document.getElementById('counter').innerHTML = data.data;
